# vega

./: .gitignore  CHANGELOG.md  CLAUDE.md  PKGBUILD  README.md  ROADMAP.md  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: release.yml
flatpak/: README.md  com.veganostr.Vega.desktop  com.veganostr.Vega.metainfo.xml  com.veganostr.Vega.yaml
scripts/: memory-test.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/relay/: db.rs  event.rs  filter.rs  mod.rs  server.rs  sub.rs
src/components/article/: ArticleCard.tsx  ArticleEditor.tsx  ArticleFeed.tsx  ArticleView.tsx  MarkdownToolbar.tsx
src/components/bookmark/: BookmarkView.tsx
src/components/dm/: DMView.tsx
src/components/feed/: ComposeBox.tsx  Feed.tsx  FountainCard.tsx  HashtagFeed.tsx  InlineReplyBox.tsx  MediaCards.tsx  NoteActions.tsx  NoteCard.tsx  NoteContent.tsx  QuoteModal.tsx  TextSegments.tsx
src/components/follows/: FollowsView.tsx
src/components/media/: MediaFeed.tsx
src/components/notifications/: NotificationsView.tsx
src/components/onboarding/: OnboardingFlow.tsx
src/components/podcast/: EpisodeList.tsx  PodcastCard.tsx  PodcastPlayerBar.tsx  PodcastsView.tsx  V4VIndicator.tsx
src/components/poll/: PollWidget.tsx
src/components/profile/: EditProfileForm.tsx  ImageField.tsx  Nip05Field.tsx  ProfileView.tsx  (+1 more)
src/hooks/: useAutoResize.ts  useNip05Verified.ts  useProfile.ts  useReactionCount.ts  useReactions.ts  useReplyCount.ts  useUpdater.ts  useZapCount.ts
src/lib/: db.ts  feedDiagnostics.ts  feedEstimate.ts  language.ts  localRelay.ts  markdown.ts  notificationPoller.ts  notifications.ts  parsing.ts  proxy.ts  tauri-dev-mock.ts  themes.ts  upload.ts  utils.ts
src/stores/: bookmark.ts  dismissedSuggestions.ts  drafts.ts  feed.test.ts  feed.ts  lightning.ts  mute.ts  notifications.ts  podcast.ts  ui.ts  user.ts
(+37 files in other folders)
